<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitey"
    tools:context=".home_page">




    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_nav"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/nayblue">


        <TextView
            android:id="@+id/phn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="FITNESS APPLICATION"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textColor="@color/whitey"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/top_nav"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="5dp"
        android:scaleType="fitXY"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:src="@drawable/homescree">

    </ImageView>

<View
    android:id="@+id/view"
    android:layout_width="match_parent"
    android:layout_height="2dp"
    android:layout_below="@id/image_view"
    android:background="@color/nayblue"
    android:layout_marginTop="10dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp">

</View>
<TextView
    android:id="@+id/text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Guide To Gain Weight"
    android:layout_below="@id/view"
    android:textSize="16dp"
    android:textColor="@color/nayblue"
    android:textStyle="bold"
    android:layout_marginTop="15dp"
    android:layout_marginStart="10dp"

    ></TextView>
<LinearLayout
    android:id="@+id/line1"
    android:layout_below="@id/text"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="35dp"
    android:layout_marginTop="20dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/nayblue"
        android:textStyle="bold"

        android:text="Top 10 quick tips"></TextView>
    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/nayblue"
        android:text="@string/step1"></TextView>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/nayblue"
        android:text="@string/step2"></TextView>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/nayblue"
        android:text="@string/step3"></TextView>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/nayblue"
        android:text="@string/step4"></TextView>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/nayblue"
        android:text="@string/step5"></TextView>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/nayblue"
        android:text="@string/step6"></TextView>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/nayblue"
        android:text="@string/step7"></TextView>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/nayblue"
        android:text="@string/step8"></TextView>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/nayblue"
        android:text="@string/step9"></TextView>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/nayblue"
        android:text="@string/step10"></TextView>
</LinearLayout>

    <View

        android:layout_width="2dp"
        android:layout_height="520dp"
        android:layout_below="@id/text"
        android:layout_marginStart="15dp"
        android:layout_marginTop="60dp"
        android:background="@color/navyblue">

    </View>
<View
    android:id="@+id/view2"
    android:layout_below="@id/line1"
    android:layout_marginTop="15dp"
    android:layout_width="match_parent"
    android:layout_height="2dp"
    android:background="@color/navyblue"
    ></View>
<ImageView

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:src="@drawable/we"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="10dp"
    android:layout_below="@id/view2">

</ImageView>

    </RelativeLayout>


</ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation_users"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/whitey"
        app:itemIconTint="@color/nayblue"
        app:itemTextColor="@color/nayblue"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/user_menu"></com.google.android.material.bottomnavigation.BottomNavigationView>

</RelativeLayout>